tests/error/modifier_errors/power_arg_type.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with power(True):
        pass


test.compile()
