tests/error/modifier_errors/power_arg_type.err
Error: Type mismatch (at $FILE:6:15)
  | 
4 | @guppy
5 | def test() -> None:
6 |     with power(True):
  |                ^^^^ Expected expression of numeric type, got `bool`

Guppy compilation failed due to 1 previous error
